[gd_scene load_steps=23 format=3 uid="uid://c8bitsc7ybbya"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_bf8ru"]
[ext_resource type="Texture2D" uid="uid://f5sx516ofsyb" path="res://characters/player/legs.png" id="2_qgy1a"]
[ext_resource type="Texture2D" uid="uid://dp05qdlei2vkx" path="res://characters/player/aim_sheet.png" id="3_wpnqy"]
[ext_resource type="Texture2D" uid="uid://bkm43cnbgvxrn" path="res://characters/zombie/dead_body.png" id="4_kohlt"]
[ext_resource type="Texture2D" uid="uid://cx53kc3c1yvij" path="res://characters/zombie/blood_splatter.png" id="5_ilehf"]
[ext_resource type="Texture2D" uid="uid://b5ugqtcggs4u2" path="res://characters/player/light.png" id="6_f1jbg"]
[ext_resource type="Texture2D" uid="uid://yvb8nqnn0ejw" path="res://characters/player/muzzle_flash.png" id="7_pvwq1"]
[ext_resource type="Texture2D" uid="uid://cgkk6a01eg81t" path="res://aim_assinst_line.png" id="8_wp4qy"]
[ext_resource type="AudioStream" uid="uid://bomrfapdkjghu" path="res://characters/zombie/death_noise1.wav" id="8_xyryx"]
[ext_resource type="AudioStream" uid="uid://b0ptr56jwws0u" path="res://characters/player/shotgun_shot1.wav" id="9_xtgcm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f7cyc"]
radius = 27.2947

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_iro56"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ppqp4"]
light_mode = 1

[sub_resource type="Animation" id="Animation_syd44"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top/Alive:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:can_shoot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs/LegL/thighL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 15.697)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Legs/LegL/calfL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-17, 8.1691)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Legs/LegL/footL:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16.0225, -4.3138)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Legs/LegR/thighR:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.92384, 41.9436)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Legs/LegR/calfR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.92384, 53.1919)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Legs/LegR/footR:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.92384, 63.4402)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:can_interact")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oo00o"]
resource_name = "aim"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top/Alive:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:can_shoot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_interact")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qgrw2"]
resource_name = "aim_shotgun"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top/Alive:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:can_shoot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2yjhd"]
_data = {
"RESET": SubResource("Animation_syd44"),
"aim": SubResource("Animation_oo00o"),
"aim_shotgun": SubResource("Animation_qgrw2")
}

[sub_resource type="Animation" id="Animation_fmsm1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs/LegL/thighL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -4.46638e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Legs/LegL/calfL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -4.57764e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs/LegL/footL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -4.46478e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Legs/LegR/thighR:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Legs/LegR/calfR:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Legs/LegR/footR:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}

[sub_resource type="Animation" id="Animation_22tvm"]
resource_name = "walk"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs/LegL/thighL:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-10, -4.46638e-05), Vector2(-9.99996, -10), Vector2(-9.99996, -10), Vector2(-10, -4.46638e-05), Vector2(-10, 10), Vector2(-10, 10), Vector2(-10, -4.46638e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Legs/LegL/calfL:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-10, -4.57764e-05), Vector2(-10, -20), Vector2(-10, -20), Vector2(-10, -4.57764e-05), Vector2(-10, 20), Vector2(-10, 20), Vector2(-10, -4.57764e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Legs/LegL/footL:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-10, -4.46478e-05), Vector2(-8.99987, -30), Vector2(-8.99987, -30), Vector2(-10, -4.46478e-05), Vector2(-10, 30), Vector2(-10, 30), Vector2(-10, -4.46478e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Legs/LegR/thighR:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(10, 10), Vector2(10, 10), Vector2(10, 0), Vector2(10, -10), Vector2(10, -10), Vector2(10, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Legs/LegR/calfR:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(10, 20), Vector2(10, 20), Vector2(10, 0), Vector2(10, -20), Vector2(10, -20), Vector2(10, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Legs/LegR/footR:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(7.99987, 30), Vector2(7.99987, 30), Vector2(10, 0), Vector2(8.00014, -31), Vector2(8.00014, -31), Vector2(10, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tr807"]
_data = {
"RESET": SubResource("Animation_fmsm1"),
"walk": SubResource("Animation_22tvm")
}

[sub_resource type="Gradient" id="Gradient_wei4d"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.727273, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0f7kp"]
gradient = SubResource("Gradient_wei4d")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.798165, 0.201835)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_bf8ru")
can_shoot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f7cyc")

[node name="Legs" type="Node2D" parent="."]

[node name="LegL" type="Node2D" parent="Legs"]

[node name="thighL" type="Sprite2D" parent="Legs/LegL"]
position = Vector2(-10, -4.46638e-05)
texture = ExtResource("2_qgy1a")
region_enabled = true
region_rect = Rect2(24.562, 81.231, 31.4573, 31.0616)

[node name="calfL" type="Sprite2D" parent="Legs/LegL"]
position = Vector2(-10, -4.57764e-05)
texture = ExtResource("2_qgy1a")
region_enabled = true
region_rect = Rect2(26.0138, 43.4239, 27.5004, 33.4357)

[node name="footL" type="Sprite2D" parent="Legs/LegL"]
position = Vector2(-10, -4.46478e-05)
texture = ExtResource("2_qgy1a")
region_enabled = true
region_rect = Rect2(29.9481, 11.6814, 18.2017, 23.9392)

[node name="LegR" type="Node2D" parent="Legs"]

[node name="thighR" type="Sprite2D" parent="Legs/LegR"]
position = Vector2(10, 0)
texture = ExtResource("2_qgy1a")
region_enabled = true
region_rect = Rect2(71.7159, 78.2445, 34.8209, 35.4139)

[node name="calfR" type="Sprite2D" parent="Legs/LegR"]
position = Vector2(10, 0)
texture = ExtResource("2_qgy1a")
region_enabled = true
region_rect = Rect2(77.2555, 41.8411, 26.9069, 33.8314)

[node name="footR" type="Sprite2D" parent="Legs/LegR"]
position = Vector2(10, 0)
texture = ExtResource("2_qgy1a")
region_enabled = true
region_rect = Rect2(81.2127, 13.5487, 16.8168, 20.7737)

[node name="Top" type="Node2D" parent="."]

[node name="Alive" type="Sprite2D" parent="Top"]
texture = ExtResource("3_wpnqy")
hframes = 10

[node name="Dead" type="Sprite2D" parent="Top"]
visible = false
z_index = -1
position = Vector2(0, -14)
texture = ExtResource("4_kohlt")

[node name="BloodSplatter" type="Sprite2D" parent="Top/Dead"]
self_modulate = Color(0.615686, 0.184314, 0.207843, 1)
position = Vector2(-1, 0)
rotation = 1.42139
texture = ExtResource("5_ilehf")

[node name="FlashLight" type="PointLight2D" parent="Top"]
visible = false
position = Vector2(0, -66)
color = Color(1, 1, 1, 0.741176)
blend_mode = 2
shadow_enabled = true
texture = ExtResource("6_f1jbg")
texture_scale = 10.05

[node name="MuzzleFlash" type="Sprite2D" parent="Top"]
visible = false
self_modulate = Color(1, 1, 0.172549, 1)
position = Vector2(1, -90)
texture = ExtResource("7_pvwq1")

[node name="Timer" type="Timer" parent="Top/MuzzleFlash"]
wait_time = 0.05
one_shot = true

[node name="AimAssistR" type="Sprite2D" parent="Top"]
visible = false
z_index = 5
material = SubResource("CanvasItemMaterial_iro56")
scale = Vector2(0.5, 0.8)
texture = ExtResource("8_wp4qy")
offset = Vector2(0, -300)

[node name="AimAssistL" type="Sprite2D" parent="Top"]
visible = false
z_index = 5
material = SubResource("CanvasItemMaterial_ppqp4")
scale = Vector2(0.5, 0.8)
texture = ExtResource("8_wp4qy")
offset = Vector2(0, -300)

[node name="RayCasts" type="Node2D" parent="Top"]

[node name="RayCast2D" type="RayCast2D" parent="Top/RayCasts"]
position = Vector2(3, -5)
target_position = Vector2(0, -3000)
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="Top/RayCasts"]
position = Vector2(3, -5)
target_position = Vector2(0, -3000)
collision_mask = 3

[node name="RayCast2D3" type="RayCast2D" parent="Top/RayCasts"]
position = Vector2(3, -5)
target_position = Vector2(0, -3000)
collision_mask = 3

[node name="RayCast2D4" type="RayCast2D" parent="Top/RayCasts"]
position = Vector2(3, -5)
target_position = Vector2(0, -3000)
collision_mask = 3

[node name="AnimationPlayerTOP" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2yjhd")
}

[node name="AnimationPlayerLEGS" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tr807")
}

[node name="zone_light" type="PointLight2D" parent="."]
light_mask = 3
energy = 0.5
blend_mode = 2
shadow_enabled = true
shadow_item_cull_mask = 3
texture = SubResource("GradientTexture2D_0f7kp")
texture_scale = 0.7

[node name="Sounds" type="Node" parent="."]

[node name="DeafSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_xyryx")
bus = &"sfx"

[node name="ShootSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_xtgcm")
bus = &"sfx"

[connection signal="timeout" from="Top/MuzzleFlash/Timer" to="Top/FlashLight" method="hide"]
[connection signal="timeout" from="Top/MuzzleFlash/Timer" to="Top/MuzzleFlash" method="hide"]
