[gd_scene load_steps=10 format=3 uid="uid://c8bitsc7ybbya"]

[ext_resource type="Texture2D" uid="uid://j4xmyho5fjf3" path="res://shooter.png" id="1_a31eh"]
[ext_resource type="Script" path="res://player.gd" id="1_bf8ru"]
[ext_resource type="Texture2D" uid="uid://bkm43cnbgvxrn" path="res://dead_body.png" id="2_jeb3d"]
[ext_resource type="Texture2D" uid="uid://cx53kc3c1yvij" path="res://blood_splatter.png" id="3_e6kif"]
[ext_resource type="AudioStream" uid="uid://bomrfapdkjghu" path="res://death_noise1.wav" id="5_847sy"]
[ext_resource type="AudioStream" uid="uid://b0ptr56jwws0u" path="res://shotgun_shot1.wav" id="6_rvs7j"]
[ext_resource type="Texture2D" uid="uid://yvb8nqnn0ejw" path="res://muzzle_flash.png" id="7_m1bfy"]
[ext_resource type="Texture2D" uid="uid://c3w16ai42o30f" path="res://light_view.png" id="8_xru3m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f7cyc"]
radius = 27.2947

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_bf8ru")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 19)
shape = SubResource("CircleShape2D_f7cyc")

[node name="Graphics" type="Node2D" parent="."]

[node name="Alive" type="Sprite2D" parent="Graphics"]
texture = ExtResource("1_a31eh")

[node name="Dead" type="Sprite2D" parent="Graphics"]
visible = false
z_index = -1
texture = ExtResource("2_jeb3d")

[node name="BloodSplatter" type="Sprite2D" parent="Graphics/Dead"]
self_modulate = Color(0.615686, 0.184314, 0.207843, 1)
position = Vector2(-1, 0)
rotation = 1.42139
texture = ExtResource("3_e6kif")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(3, 9)
target_position = Vector2(0, -1000)
collision_mask = 3

[node name="DeafSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_847sy")
bus = &"sfx"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rvs7j")
bus = &"sfx"

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 0.172549, 1)
position = Vector2(1, -66)
texture = ExtResource("7_m1bfy")

[node name="Timer" type="Timer" parent="MuzzleFlash"]
wait_time = 0.05
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.717647, 0.337255, 0.729412, 1)

[node name="Panel" type="Panel" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -43.0
offset_right = 106.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 30.0
grow_horizontal = 2
text = "You Dieded"

[node name="Button" type="Button" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -46.0
offset_right = 33.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart
"

[node name="Light_View" type="PointLight2D" parent="."]
visible = false
light_mask = 3
energy = 0.15
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("8_xru3m")
texture_scale = 1.96

[connection signal="timeout" from="MuzzleFlash/Timer" to="MuzzleFlash" method="hide"]
[connection signal="button_up" from="CanvasLayer/DeathScreen/Panel/Button" to="." method="restart"]
